# Movie-Recommender

./: .gitignore  README.md
backend/: config.py  main.py  pyproject.toml  render.yaml
backend/models/: collaborative.py  content.py  hybrid.py
backend/movie_recommender_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/routers/: meta.py  movies.py  ratings.py  recommendations.py
backend/schemas/: models.py
backend/services/: auth.py  data_loader.py  model_store.py  ratings_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/movies/: GenreFilter.tsx  MovieCard.tsx  MovieGrid.tsx  StarRating.tsx
frontend/src/components/recommendations/: ColdStartBanner.tsx  RecommendationList.tsx
frontend/src/context/: AuthContext.tsx  RatingsContext.tsx
frontend/src/hooks/: useMovies.ts  usePosterUrl.ts  useRecommendations.ts  useUser.ts
frontend/src/lib/: tmdb.ts
frontend/src/pages/: AuthPage.tsx  BrowsePage.tsx  HomePage.tsx  MoviePage.tsx  RecommendationsPage.tsx
